# notebook-ta

./: .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  authoring_exercises.md  benchmarking.md  conf.py  configuration.md  index.md  release.md  security.md
docs/examples/: example_notebook.ipynb  exercises.toml  global_config.toml  test_helpers.py
notebook_ta/: __init__.py  i18n.py  logging.py
notebook_ta/bench/: __init__.py  app.py  catalog.py  cli.py  executor.py  hashing.py  internal_model.py  models.py  state.py  storage.py
notebook_ta/bench/ui/: __init__.py  _helpers.py  compare_tab.py  exercises_tab.py  layout.py  native_dialogs.py  runner_tab.py  settings_tab.py  tag_badges.py  welcome_dialog.py
notebook_ta/cli/: __init__.py  scaffold.py
notebook_ta/config/: __init__.py  loader.py  models.py
notebook_ta/exercise/: __init__.py  definition.py  registry.py
notebook_ta/llm/: __init__.py  base.py  ollama.py  openai_compat.py
notebook_ta/notebook/: __init__.py  _ansi.py  display.py  extractor.py  magic.py  session.py  streaming.py
notebook_ta/setup_wizard/: __init__.py  detector.py
notebook_ta/testing/: __init__.py  runner.py
spec/: Architecture.md  PROJECT.md  PromptBenchmarking.md  PromptBenchmarkingArchitecture.md
tests/: __init__.py  test_bench_app.py  test_bench_catalog.py  test_bench_cli.py  test_bench_compare_ui.py  test_bench_executor.py  test_bench_exercises_ui.py  test_bench_hashing.py  test_bench_internal_model.py  test_bench_models.py  test_bench_project_ui.py  test_bench_runner_ui.py  test_bench_state.py  test_bench_storage.py  test_config.py  test_display.py  test_exercise.py  test_external_helper.py  test_extractor.py  test_llm.py  test_load_setup.py  test_logging.py  test_magic.py  test_runner.py  test_scaffold.py  test_streaming_integration.py
