[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook-ta"
version = "0.1.3"
description = "LLM-powered teaching assistant for Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "notebook-ta contributors" }]
keywords = ["jupyter", "teaching", "llm", "education", "notebook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "openai>=1.0",
    "ollama>=0.4.0",
    "click>=8.0",
    "nbformat>=5.0",
    "ipynbname>=0.3",
    "nest_asyncio>=1.5",
    "nicegui>=1.4",
    "tomlkit>=0.13",
    "cloudpickle>=3.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.1",
    "myst-parser>=4.0",
    "sphinx-rtd-theme>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://github.com/PerretB/notebook-ta"
"Documentation" = "https://notebook-ta.readthedocs.io/"
"Repository" = "https://github.com/PerretB/notebook-ta.git"
"Issues" = "https://github.com/PerretB/notebook-ta/issues"

[project.scripts]
notebook-ta = "notebook_ta.bench.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["notebook_ta"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = [
    "ipynbname",
    "ipywidgets",
    "nest_asyncio",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "nicegui_main_file(path): identify the application module for NiceGUI user-simulation tests",
]
